Fri Mar  5 11:21:54 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Atomic_Op_Test.cpp:
          Added more checks to make sure Atomic_Op does work

Tue Mar  2 21:02:51 UTC 2010  Steve Huston  <shuston@riverace.com>

        * ace/Dev_Poll_Reactor.cpp (mask_ops_i): If the specified handle is
          not registered, return -1 instead of crashing.

Thu Mar  4 09:15:54 UTC 2010  Martin Corino  <mcorino@remedy.nl>

        * bin/make_release.py:
          Fix for problems with creating MPC release tag.

Thu Mar  4 07:50:54 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Atomic_Op_Test.cpp:
          Rewritten this test to use a template method so that we can
          test atomic op easily for various data types

        * ace/Time_Value.cpp:
          Layout changes and fixed compile problem with CB2010. This fixes
          bugzilla 3835, thanks to Jan Kalin <jan dot kalin at zag dot si>
          for reporting this.

        * ace/config-win32-borland.h:
          CB also has long timevalue mismatch

Thu Mar  4 07:50:54 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * NEWS:
          Updated for next micro

        * rpmbuild/ace-tao.spec:
          Fixed problem with installation of nslist readme

        * etc/index.html:
          Added 5.7.7

        * docs/Download.html:
          Updated for 5.7.7

        * docs/bczar/bczar.html:
          Several updates because we now package on a FC12 system

        * debianbuild/rules:
          Removed commented out part

        * bin/make_release.py:
          Next micro release will not ship msvc71 solutions, it is still
          supported but the end user should generate the solutions him self.
          Also WinCE solutions are not generated anymore for CIAO and the
          autoconf bootstrapping is done much earlier in the release process
          so when it fails we know early. The hostname check has been removed
