@@ -1,3 +1,8 @@
+Fri Mar  5 11:28:54 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * tests/Atomic_Op_Test.cpp:
+          Also measure postfix increment/decrement
+
 Fri Mar  5 11:21:54 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * tests/Atomic_Op_Test.cpp:
